<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink" >

    <ImageView
        android:id="@+id/img_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_main_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="bottom"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/hint_text"
                    style="@style/TextCommon.big" >
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/text_duration"
                        style="@style/TextCommon"
                        android:text="@string/duration_text" >
                    </TextView>

                    <TextView
                        android:id="@+id/duration_time"
                        style="@style/TextCommon" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/text_timing"
                        style="@style/TextCommon"
                        android:text="@string/timing_text" >
                    </TextView>

                    <TextView
                        android:id="@+id/timing_time"
                        style="@style/TextCommon" >
                    </TextView>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_change_bg"
                    style="@style/BtnCommon"
                    android:background="@drawable/btn_common"
                    android:text="@string/btn_change_bg_text" />

                <Button
                    android:id="@+id/btn_hide_all"
                    style="@style/BtnCommon"
                    android:background="@drawable/btn_common"
                    android:text="@string/btn_hide_all_text" />

                <Button
                    android:id="@+id/btn_backstage"
                    style="@style/BtnCommon"
                    android:background="@drawable/btn_common"
                    android:text="@string/btn_backstage_text" />

                <Button
                    android:id="@+id/btn_duration"
                    style="@style/BtnCommon"
                    android:background="@drawable/btn_common"
                    android:text="@string/btn_duration_text" />

                <Button
                    android:id="@+id/btn_timing"
                    style="@style/BtnCommon"
                    android:background="@drawable/btn_common"
                    android:text="@string/btn_timing_text" />

                <Button
                    android:id="@+id/btn_stop"
                    style="@style/BtnCommon.stop"
                    android:background="@drawable/btn_stop"
                    android:text="@string/btn_stop_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" >

                <ImageView
                    android:id="@+id/img_machine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/img_machine_desc"
                    android:scaleType="centerInside"
                    android:src="@drawable/bg_machine" />

                <com.cool.comfort.util.VerticalSeekBar
                    android:id="@+id/frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_toEndOf="@id/img_machine"
                    android:layout_toRightOf="@id/img_machine"
                    android:progressDrawable="@drawable/freq_seekbar_style" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>